# st

./: .gitignore  .gitmodules  CMakeLists.txt  attr.h  common.h  engine.c  glad_loader.c  gladgen.sh  main.c  model.c  parse.c  parse.h  renderer.c  renderer_gl.c  renderer_gl.h  util.c  vector.c  vector.h  window.c  window_win32.c  window_win32.h  window_x11.c  window_x11.h
assets/: basic.frag  basic.vert
assets/shaders/: basic.frag  basic.vert  fragment_2d.glsl  vertex_2d.glsl
example/: CMakeLists.txt  main.c
include/st/: args.h  camera.h  common.h  engine.h  escape_codes.h  event.h  glad_loader.h  instance.h  keys.h  model.h  parse.h  print.h  renderer.h  renderer_gl.h  vector.h  window.h  window_win32.h  window_x11.h
include/st/gfx/: camera.h  renderer2d.h  texture.h  vertex.h
include/st/graphics/: camera.h  draw_text.h  image.h  renderer.h  renderer2d.h  texture.h  vertex.h
include/st/input/: keyboard.h  keys.h  mouse.h
include/st/util/: args.h  assert.h  print.h  stringbuilder.h  util.h  vector.h
include/st/utility/: assert.h  compiler.h  list.h  minmax.h  parse.h  print.h  string.h  stringbuilder.h  terminal.h  util.h  vector.h
include/st/utils/: args.h  compiler.h  escape_codes.h  minmax.h  parse.h  print.h  stringbuilder.h  util.h  vector.h
src/: args.c  assert.c  callbacks.c  callbacks.h  camera.c  draw_text.c  engine.c  event.c  glad_loader.c  instance.c  keyboard.c  model.c  mouse.c  parse.c  print.c  renderer.c  renderer2d.c  renderer_gl.c  string.c  stringbuilder.c  texture.c  util.c  vector.c  window.c  window_win32.c  window_x11.c
src/image/: common.h  context.c  image.c  png.c
src/impl/: context_glx.c  context_glx.h  renderer_gl.c  renderer_gl.h  texture_gl.c  texture_gl.h  window_x11.c  window_x11.h
tests/: CMakeLists.txt  main.c  test.h  test_args.c  test_string.c  test_stringbuilder.c  test_vector.c
